--- a/full-stack.html
+++ b/full-stack.html
@@ -42,7 +42,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/beetalents/62b8244d-1a0e-4cff-b70c-c917b138a997'>Bee Talents - Fullstack RoR Developer - Pomar/Pixie [up to 17k PLN net B2B]</a></h5> 
+<h5><a href='https://jobs.lever.co/beetalents/62b8244d-1a0e-4cff-b70c-c917b138a997'>Bee Talents - Fullstack RoR Developer - Pomar/Pixie [up to 17k PLN net B2B]</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -110,11 +110,11 @@
 <p><span class="badge badge-light">Cambridge</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/useloom/f300409a-d4cd-4510-b562-4e7afbff65ec'>Loom - Senior Full Stack Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/useloom/f300409a-d4cd-4510-b562-4e7afbff65ec'>Loom - Senior Full Stack Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.aon3d.com/careers/senior-full-stack-developer/'>Senior Full Stack Developer - AON3D</a></h5> 
+<h5><a href='https://www.aon3d.com/careers/senior-full-stack-developer/'>Senior Full Stack Developer - AON3D</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -185,7 +185,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/inrix/job/o8epbfwG'>INRIX Careers - Full Stack Software Development Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/inrix/job/o8epbfwG'>INRIX Careers - Full Stack Software Development Engineer</a></h5> 
 <p><span class="badge badge-light">Kirkland, Washington</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -227,7 +227,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light">Glendale, CA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oiFvafwm&__jvst=Employee+Referral&__jvsd=swYPygwC&__jvsc=Twitter&bid=n3UBlMwa'>ServiceNow Careers - Full Stack Software Engineer-CSM</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oiFvafwm&__jvst=Employee+Referral&__jvsd=swYPygwC&__jvsc=Twitter&bid=n3UBlMwa'>ServiceNow Careers - Full Stack Software Engineer-CSM</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -239,13 +239,13 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jellysmack.recruitee.com/l/en/o/developpeur-fullstack-hf-cdi'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jellysmack.recruitee.com/l/en/o/developpeur-fullstack-hf-cdi'>
       D?veloppeur Full-Stack H/F - CDI - Jellysmack
     </a></h5> 
 <p><span class="badge badge-light">Levallois-Perret, France</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='http://nationalcreditcenter.applytojob.com/apply/7SjNEGLrml/Full-Stack-C-Developer'>Full Stack C# Developer - National Credit Center - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://nationalcreditcenter.applytojob.com/apply/7SjNEGLrml/Full-Stack-C-Developer'>Full Stack C# Developer - National Credit Center - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -279,7 +279,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999698229917-full-stack-software-engineer'>4Catalyzer Full-Stack Software Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999698229917-full-stack-software-engineer'>4Catalyzer Full-Stack Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -323,7 +323,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://bx-cert.ru/job/full-stack-developer-bitrix-php-javascript-jquery-cms-66233/'>? ?????????? ????????? Full - stack - developer (Bitrix, PHP, JavaScript, jQuery, CMS), ???????? ?? 40000 ?? 80000 ??????</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bx-cert.ru/job/full-stack-developer-bitrix-php-javascript-jquery-cms-66233/'>? ?????????? ????????? Full - stack - developer (Bitrix, PHP, JavaScript, jQuery, CMS), ???????? ?? 40000 ?? 80000 ??????</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -343,7 +343,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light">Zurich, Switzerland</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/atlassian/681f7e9d-1fe8-409e-b4f8-7c890c4174a6'>Atlassian - Senior Fullstack Software Engineer, Bitbucket</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/atlassian/681f7e9d-1fe8-409e-b4f8-7c890c4174a6'>Atlassian - Senior Fullstack Software Engineer, Bitbucket</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -363,7 +363,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light">Medellin, Colombia</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nezasa.join.com/jobs/460135-full-stack-software-engineer'>Job @ Nezasa (Lisbon): Full-Stack Software Engineer | JOIN</a></h5> 
+<h5><a href='https://nezasa.join.com/jobs/460135-full-stack-software-engineer'>Job @ Nezasa (Lisbon): Full-Stack Software Engineer | JOIN</a></h5> 
 <p><span class="badge badge-light">Lisbon Lisbon, Portugal  Zurich, Switzerland Lisbon, Portugal Lisbon</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -395,11 +395,11 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/elementai/jobs/1900285'>Job Application for Full-Stack Developer - Capital Markets at Element AI</a></h5> 
+<h5><a href='https://boards.greenhouse.io/elementai/jobs/1900285'>Job Application for Full-Stack Developer - Capital Markets at Element AI</a></h5> 
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/lambdal/b22b78e0-a598-42fb-94a8-ed6de2648397'>Lambda - Software Engineer - Full Stack</a></h5> 
+<h5><a href='https://jobs.lever.co/lambdal/b22b78e0-a598-42fb-94a8-ed6de2648397'>Lambda - Software Engineer - Full Stack</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
